css sticky footer is working, but fixing the margin overflow problem next

--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -34,6 +34,30 @@ li
   
 abbr[title]
   border-bottom: none
+  
+*
+  margin: 0
+  
+html, body 
+  height: 100%
+
+.wrapper 
+  min-height: 100%
+  height: auto !important
+  height: 100%
+  margin: 0 auto -142px 
+
+.footer, .push
+  height: 142px
+  
+.footer
+  width: auto
+  background: #999
+  
+.footer li
+  display: inline
+  padding-left: 12px
+
 
 
   
